@@ -2847,6 +2847,33 @@ test(1022, DT[5:0,A:=21L], error="i[[]6[]] is 0 which is out of range [[]1,nrow=
 test(1023, DT[c(1,2,NA,3), B:="bar"], error="i[[]3[]] is NA")
 test(1024, DT[6,A:=0L], error="i[[]1[]] is NA. Can't")  # TO DO: earlier point at R level is replacing 6 with NA?
 
+# tests for as.data.table.table # FR 4848
+DF <- data.frame(x = c(1,1,2,NA,1,2), y = c("b", "b", "b", "a", "c", "a"), z = c(1,1,1,1,1,2), stringsAsFactors=FALSE	)
+tab1 <- as.data.table(as.data.frame(table(DF$x), stringsAsFactors=FALSE)); setattr(tab1, 'names', c("V1", "N"))
+tab2 <- as.data.table(as.data.frame(table(DF$x, DF$y), stringsAsFactors=FALSE)); setattr(tab2, 'names', c("V1", "V2", "N"))
+tab3 <- as.data.table(as.data.frame(table(DF$x, DF$y, DF$z), stringsAsFactors=FALSE)); setattr(tab3, 'names', c("V1", "V2", "V3", "N"))
+test(1025, as.data.table(table(DF$x)), tab1)
+test(1026, as.data.table(table(DF$x, DF$y)), tab2)
+test(1027, as.data.table(table(DF$x, DF$y, DF$z)), tab3)
+
+# tests for as.data.table.x where x is integer, numeric, etc...
+set.seed(45)
+x <- sample(5)
+test(1028, as.data.table(x), data.table(x))
+x <- as.numeric(x)
+test(1029, as.data.table(x), data.table(x))
+x <- as.Date(x, origin="2013-01-01")
+test(1030, as.data.table(x), data.table(x))
+x <- factor(sample(5))
+test(1031, as.data.table(x), data.table(x))
+x <- factor(x, ordered=TRUE)
+test(1032, as.data.table(x), data.table(x))
+x <- as.logical(sample(0:1, 5, TRUE))
+test(1033, as.data.table(x), data.table(x))
+x <- as.character(sample(letters, 5))
+test(1034, as.data.table(x), data.table(x))
+
+
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 # TO DO: tests on double in add hoc by
 # TO DO: test on -i that retain key e.g.  DT[-4] and DT[-4,sum(v),by=b] should both retain key
